--- a/preamble.tex
+++ b/preamble.tex
@@ -4,8 +4,8 @@
 % Imports
 % ------------------------------------------------------------------------------
 
-\usepackage{pdf14}
-\usepackage[T1]{fontenc}
+% \usepackage{pdf14}
+% \usepackage[T1]{fontenc}
 \usepackage{ifpdf}
 \ifpdf
 \RequirePackage{hyperref}
@@ -48,7 +48,7 @@
 \usepackage{setspace}
 % \usepackage{showidx}
 \usepackage[color]{showkeys}
-\usepackage{subfig}
+\usepackage{subcaption}
 \usepackage{titlesec}
 \usepackage[width={autoauto}]{thumbs}
 \usepackage{tabu}
@@ -279,6 +279,7 @@
 \newcommand{\makeatchar}{\lstDeleteShortInline@}
 
 \makeatactive
+\newcommand{\app}{\ensuremath{\mathbin{\texttt{\char"40}}}}
 
 
 % Chapter page style
