--- a/preamble.tex
+++ b/preamble.tex
@@ -275,10 +275,10 @@
 \newcommand{\code}[1]{\lstinline[style=inline];#1;}
 \newcommand{\footcode}[1]{\lstinline[style=inline];#1;}
 
-\newcommand{\makeatactive}{\lstMakeShortInline[style=inline]@}
-\newcommand{\makeatchar}{\lstDeleteShortInline@}
+\newcommand{\maketickcode}{\lstMakeShortInline[style=inline]`}
+\newcommand{\maketickchar}{\lstDeleteShortInline`}
 
-\makeatactive
+\maketickcode
 \newcommand{\app}{\ensuremath{\mathbin{\texttt{\char"40}}}}
 
 
