--- a/sections/03-design.tex
+++ b/sections/03-design.tex
@@ -119,7 +119,7 @@ blocks}\index{GPU!thread block}. Threads within a block can cooperate by sharing
 data through some \emph{shared memory}\index{GPU!shared memory} and by
 synchronising their execution to coordinate memory access. More precisely, the
 programmer can specify synchronisation points in the kernel by calling
-@__syncthreads()@\index{GPU!\code{__syncthreads()}}, which acts as a barrier at
+`__syncthreads()`\index{GPU!\code{__syncthreads()}}, which acts as a barrier at
 which all threads in the block must wait before any is allowed to proceed. Each
 thread block executes independently of each other, so a GPU with a higher number
 of CUDA cores --- or \emph{streaming multiprocessors}\index{GPU!streaming
@@ -157,12 +157,12 @@ int main()
 
 At an example, Listing~\ref{lst:cuda_vecadd} illustrates the pair wise addition
 of two vectors $A$ and $B$ of size $N$ each, and stores the result in a vector
-$C$. The kernel is defined with the @__global__@ declaration specifier. The
+$C$. The kernel is defined with the `__global__` declaration specifier. The
 number of CUDA thread blocks and the number of threads in each block that
-execute the kernel, at this invocation, is specified in the @<<<...>>>@ syntax.
+execute the kernel, at this invocation, is specified in the `<<<...>>>` syntax.
 Moreover, Listing~\ref{lst:cuda_vecadd} demonstrates that the GPU programming
 model as exposed by CUDA is a data parallel programming model --- $N$ threads
-execute $N$ individual instances of the kernel function @VecAdd@, and each
+execute $N$ individual instances of the kernel function `VecAdd`, and each
 thread operates on a single element of each input array to create a single value
 in the result. See the CUDA C programming guide for details~\cite{NVIDIA:2012wf}.
 
@@ -300,7 +300,7 @@ dotp_list :: [Float] -> [Float] -> Float
 dotp_list xs ys = foldl (+) 0 (zipWith (*) xs ys)
 \end{lstlisting}
 %
-The two input vectors @xs@ and @ys@ are pointwise multiplied, and the resulting
+The two input vectors `xs` and `ys` are pointwise multiplied, and the resulting
 list of products is summed, yielding the scalar result.
 
 Using Accelerate, we implement this computation on arrays as follows:
@@ -314,22 +314,22 @@ dotp xs ys
       fold (+) 0 (zipWith (*) xs' ys')                                             -- (3)
 \end{lstlisting}
 %
-Here, @fold@ and @zipWith@ are taken from the Accelerate library
-@Data.Array.Accelerate@, rather than from the standard Haskell library
-@Data.List@. The Accelerate code differs from the list version in three
+Here, `fold` and `zipWith` are taken from the Accelerate library
+`Data.Array.Accelerate`, rather than from the standard Haskell library
+`Data.List`. The Accelerate code differs from the list version in three
 respects:
 %
 \begin{enumerate}
-    \item The result is an Accelerate computation, indicated by the type @Acc@.
-    \item We lift the two plain vectors @xs@ and @ys@ into @Acc@ terms with @use@.
-    \item We use @fold@ instead of @foldl@.
+    \item The result is an Accelerate computation, indicated by the type `Acc`.
+    \item We lift the two plain vectors `xs` and `ys` into `Acc` terms with `use`.
+    \item We use `fold` instead of `foldl`.
 \end{enumerate}
 %
 The first two points are artefacts of lifting the computation into an embedded
 language, effectively delaying the computation. Concerning the final point, the
-list traversal function @foldl@ guarantees a left-to-right traversal of the
-elements, whereas @fold@ leaves the order in which the elements are combined
-unspecified. This requires that the binary operator supplied to @fold@ is
+list traversal function `foldl` guarantees a left-to-right traversal of the
+elements, whereas `fold` leaves the order in which the elements are combined
+unspecified. This requires that the binary operator supplied to `fold` is
 associative and commutative,\footnote{Although floating-point arithmetic is not
 strictly associative, it is common to accept the resulting error in parallel
 applications.} but allows for an implementation using a parallel tree
@@ -340,18 +340,18 @@ reduction~\cite{Chatterjee:1990vj,Sengupta:2007tc}.
 \label{sec:arrays_shapes_and_indices}
 
 Parallelism in Accelerate takes the form of collective operations such as
-@zipWith@ on arrays of type @Array sh e@, where @sh@ is the \emph{shape} and @e@
+`zipWith` on arrays of type `Array sh e`, where `sh` is the \emph{shape} and `e`
 the \emph{element type} of the array. Following the approach taken in
 Repa~\cite{Keller:2010er}, we represent both the shapes and indices of an array
 using an inductive notation of tuples as heterogeneous \emph{snoc} lists to
 enable rank-polymorphic definitions of array functions.
 
 As shown in Listing~\ref{lst:shapes_and_indices}, on both the type and value
-level, the constructor @Z@ is used to represent the shape of a rank-0 array, and
-the infix operator @(:.)@ to increase the rank by adding a new (innermost)
-dimension to the right of the shape. Thus, a rank-3 index with components @x@,
-@y@, and @z@, is written @(Z:.z:.y:.x)@ and has type @(Z:.Int:.Int:.Int)@, where
-the component @x@ is innermost and varies most rapidly, while the component @z@
+level, the constructor `Z` is used to represent the shape of a rank-0 array, and
+the infix operator `(:.)` to increase the rank by adding a new (innermost)
+dimension to the right of the shape. Thus, a rank-3 index with components `x`,
+`y`, and `z`, is written `(Z:.z:.y:.x)` and has type `(Z:.Int:.Int:.Int)`, where
+the component `x` is innermost and varies most rapidly, while the component `z`
 varies least rapidly.
 
 \begin{lstlisting}[style=haskell_float
@@ -370,12 +370,12 @@ type Array DIM0 e = Scalar e
 type Array DIM1 e = Vector e
 \end{lstlisting}
 
-Overall, an array of type @Array (Z:.Int:.Int) Float@ is a rank-2 array of
+Overall, an array of type `Array (Z:.Int:.Int) Float` is a rank-2 array of
 single precision floating-point numbers. Listing~\ref{lst:shapes_and_indices}
-also defines synonyms for common array types: a singleton array of shape @DIM0@
-represent a single scalar value, while an array of shape @DIM1@ represents a
-vector, and so on. While it may appear that the explicit mentioning of @Int@ in
-each dimension is redundant, we require indices over types other than @Int@ for
+also defines synonyms for common array types: a singleton array of shape `DIM0`
+represent a single scalar value, while an array of shape `DIM1` represents a
+vector, and so on. While it may appear that the explicit mentioning of `Int` in
+each dimension is redundant, we require indices over types other than `Int` for
 rank polymorphic functions, such as replicating an array into one or more
 additional dimensions or slicing a lower-dimensional subarray out of a larger
 array~\cite{Keller:2010er,Chakravarty:2011fr}.
@@ -387,7 +387,7 @@ array~\cite{Keller:2010er,Chakravarty:2011fr}.
 Accelerate is an \emph{embedded language} (\S\ref{sec:EDSLs}) that distinguishes
 between vanilla Haskell arrays and arrays in the embedded language, as well as
 computations on both flavours of arrays. Embedded array computations are
-identified by types formed from the type constructor @Acc@, and must be
+identified by types formed from the type constructor `Acc`, and must be
 explicitly executed before taking effect. The following function embeds a
 Haskell array into an embedded array computation:
 %
@@ -399,28 +399,28 @@ use :: (Shape sh, Elt e)
 In the context of GPU programming, GPUs typically have their own
 high-performance memory which is separate from the host CPU's main memory, and
 data must be explicitly transferred to the GPU's memory before it can be used.
-The distinction between regular arrays of type @Array sh e@ and arrays of the
-embedded language @Acc (Array sh e)@ has the added benefit of differentiating
+The distinction between regular arrays of type `Array sh e` and arrays of the
+embedded language `Acc (Array sh e)` has the added benefit of differentiating
 between arrays allocated in host memory and arrays allocated in GPU device
-memory. Thus, @use@ also implies a host-to-device data transfer. See
+memory. Thus, `use` also implies a host-to-device data transfer. See
 section~\ref{sec:memory_management} for more information on how device memory is
-managed. Similarly, expressions in @Acc@ are computations that are executed on
+managed. Similarly, expressions in `Acc` are computations that are executed on
 the device (the GPU), whereas regular Haskell code runs on the host (the CPU).
 
 
 \subsection{Array computations versus scalar expressions}
 \label{sec:array_computations_vs_scalar_expressions}
 
-The signatures of the two operations @zipWith@ and @fold@, using in the
-definition of @dotp@, are shown in Listing~\ref{lst:acc_operations}. These
+The signatures of the two operations `zipWith` and `fold`, using in the
+definition of `dotp`, are shown in Listing~\ref{lst:acc_operations}. These
 operations follow the signatures of the corresponding list functions, but with
-arrays wrapped in @Acc@. In addition to @Acc@, which marks embedded array
-computations, we also have @Exp@, which marks \emph{embedded scalar}
-computations: a term of type @Exp Int@ represents an embedded expression
-yielding a value of type @Int@, and similarly @Exp Float -> Exp (Float,Float)@
-characterises an embedded scalar function that takes an argument of type @Float@
-and yields a pair of @Float@s as the result. As with computations embedded in
-@Acc@, computations in @Exp@ are executed on the device.
+arrays wrapped in `Acc`. In addition to `Acc`, which marks embedded array
+computations, we also have `Exp`, which marks \emph{embedded scalar}
+computations: a term of type `Exp Int` represents an embedded expression
+yielding a value of type `Int`, and similarly `Exp Float -> Exp (Float,Float)`
+characterises an embedded scalar function that takes an argument of type `Float`
+and yields a pair of `Float`s as the result. As with computations embedded in
+`Acc`, computations in `Exp` are executed on the device.
 
 \begin{lstlisting}[style=haskell_float,
     numbers=none,
@@ -465,26 +465,26 @@ stencil     :: Stencil sh a stencil => (stencil -> Exp b)             %\rm map a
 \end{lstlisting}
 
 Accelerate distinguishes the types of collective and scalar computations to
-achieve a stratified language. Collective operations in @Acc@ comprise many
-scalar computations in @Exp@ that are executed in parallel. However, scalar
+achieve a stratified language. Collective operations in `Acc` comprise many
+scalar computations in `Exp` that are executed in parallel. However, scalar
 computations \emph{can not} contain collective operations. This stratification
 excludes \emph{nested, irregular} data parallelism statically --- instead,
 Accelerate is limited to \emph{flat data-parallelism} involving only regular,
 multi-dimensional arrays.
 
-Compared to regular Haskell, @Exp@ computations are rather limited in order to
+Compared to regular Haskell, `Exp` computations are rather limited in order to
 meet the restrictions of what can be efficiently executed on GPUs\@. In
 particular, we do not support recursion, and provide only a limited form of
 explicit value iteration. Scalar expressions support Haskell's standard arithmetic
-operations by overloading the standard type classes such as @Num@ and @Integaral@,
-as well as bitwise operations from @Bits@. Although we can not overload
-functions on @Bool@ in standard Haskell, we support equality and comparison
-operators as well as logical connectives using the operators @(==*)@, @(/=*)@,
-@(<*)@, \lstinline[style=inline,literate=]{(<=*)},      % don't turn into (≤*)
-and so on. We also have conditional expressions in the form of @c ? (t, e)@,
-which evaluates to @t@ if @c@ yields @True@, otherwise to @e@. There are also
-scalar operations that take array valued arguments; namely, @arr!ix@ indexes an
-array and @shape@ queries the extent of an array. The argument to these
+operations by overloading the standard type classes such as `Num` and `Integaral`,
+as well as bitwise operations from `Bits`. Although we can not overload
+functions on `Bool` in standard Haskell, we support equality and comparison
+operators as well as logical connectives using the operators `(==*)`, `(/=*)`,
+`(<*)`, \lstinline[style=inline,literate=]{(<=*)},      % don't turn into (≤*)
+and so on. We also have conditional expressions in the form of `c ? (t, e)`,
+which evaluates to `t` if `c` yields `True`, otherwise to `e`. There are also
+scalar operations that take array valued arguments; namely, `arr!ix` indexes an
+array and `shape` queries the extent of an array. The argument to these
 operations is guaranteed to only be a previously let-bound variable, thus each
 invocation of the scalar function will not initiate additional parallel work.
 Finally, we have tupling and projection, and auxiliary functions for computing
@@ -507,10 +507,10 @@ type Mass       = Float
 type PointMass  = (Position, Mass)
 \end{lstlisting}
 %
-@Vec@ is the type of 3-component vectors, which are used to store the $x$-, $y$,
+`Vec` is the type of 3-component vectors, which are used to store the $x$-, $y$,
 and $z$-components of the particle's position in 3D space and velocity component
-along each dimension in @Position@ and @Accel@ respectively. A @PointMass@
-is represented as a tuple containing the body's @Mass@ and @Position@.
+along each dimension in `Position` and `Accel` respectively. A `PointMass`
+is represented as a tuple containing the body's `Mass` and `Position`.
 
 In a data-parallel setting, the natural implementation first computes the forces
 between every pair of bodies, before reducing the components applied to each
@@ -530,31 +530,31 @@ calcAccels epsilon bodies
 \end{lstlisting}
 %
 \begin{enumerate}
-\item @replicate@ expands the vector of @n@ bodies into an @n@$\times$@n@
-    matrix, where we replicate @All@ elements of the source array such that
+\item `replicate` expands the vector of `n` bodies into an `n`$\times$`n`
+    matrix, where we replicate `All` elements of the source array such that
     every element down the columns or along the rows of the matrix are
-    identical, respectively. The operation @lift@ is used to push the shape
+    identical, respectively. The operation `lift` is used to push the shape
     constructors into the expression; that is, in this instance we have
-    @lift :: (Z :. Exp Int :. All) -> Exp (Z :. Int :. All)@.
+    `lift :: (Z :. Exp Int :. All) -> Exp (Z :. Int :. All)`.
 
-\item @zipWith@ calculates the interaction between each pair of particles by
-    element wise combining the @n@$\times$@n@ matrices.
+\item `zipWith` calculates the interaction between each pair of particles by
+    element wise combining the `n`$\times$`n` matrices.
     % Since we replicated the source vector along the rows and columns, this
     % computes all $n^{2}$ interactions.
 
-\item @fold@ reduces the result along the innermost dimension only, yielding a
+\item `fold` reduces the result along the innermost dimension only, yielding a
     vector containing the sum of interactions for each particle between all
-    others. The auxiliary function @(.+.)@ performs component-wise addition of
+    others. The auxiliary function `(.+.)` performs component-wise addition of
     the 3-vector.
 \end{enumerate}
 
 This is an example of using the rank polymorphic operations of Accelerate. The
-function @fold@ requires an argument array of at least rank-1 (such as a
+function `fold` requires an argument array of at least rank-1 (such as a
 matrix), and the result is computed by reducing the array along the innermost
 dimension, reducing the rank of the array by one (in this case yielding a
-vector). The functions @replicate@ and @slice@ are rank polymorphic as well, but
+vector). The functions `replicate` and `slice` are rank polymorphic as well, but
 require more complex shape constraints that we characterise with the type family
-@FullShape@ and @SliceShape@ that statically track changing array dimensions.
+`FullShape` and `SliceShape` that statically track changing array dimensions.
 For details on the various forms of shape polymorphism,
 see~\cite{Keller:2010er}. Overall, as shown in Listing~\ref{lst:acc_operations},
 the collective operations of Accelerate are a multi-dimensional variant of those
@@ -635,27 +635,27 @@ accel epsilon pmi pmj = (mj * invr3) *. r
     invr3       = invr * invr * invr
 \end{lstlisting}
 %
-Here the functions @positionOfPointMass@ and @massOfPointMass@ extract each
-component of the @PointMass@, respectively. The function @(.-.)@ is
-component-wise subtraction applied to the 3-vector, and @(*.)@ multiplies each
+Here the functions `positionOfPointMass` and `massOfPointMass` extract each
+component of the `PointMass`, respectively. The function `(.-.)` is
+component-wise subtraction applied to the 3-vector, and `(*.)` multiplies each
 component of a 3-vector by a scalar value.
 
 
 \subsection{Non-parametric array representation}
 
-In the type signature of @use@ in
-section~\ref{sec:arrays_on_the_host_and_device}, the type classes @Shape@ and
-@Elt@ characterise the types that may be used as array indices and array
+In the type signature of `use` in
+section~\ref{sec:arrays_on_the_host_and_device}, the type classes `Shape` and
+`Elt` characterise the types that may be used as array indices and array
 elements respectively. We discussed the nature of array indices in
-section~\ref{sec:arrays_shapes_and_indices}. The @Elt@ class characterises the types
+section~\ref{sec:arrays_shapes_and_indices}. The `Elt` class characterises the types
 of values that can be used as array elements, and hence appear in scalar
-Accelerate expressions. The supported @Elt@ types are signed \& unsigned integers (8,
+Accelerate expressions. The supported `Elt` types are signed \& unsigned integers (8,
 16, 32, and 64-bit wide), floating point numbers (single \& double precision),
-as well as @Char@, @Bool@, and array indices formed from @Z@ and @(:.)@.
+as well as `Char`, `Bool`, and array indices formed from `Z` and `(:.)`.
 Furthermore, there are tuples of all of those, including nested tuples, as was
 seen in the N-body example~(\S\ref{sec:computing_nbody}).
 
-Accelerate arrays of primitive type, such as @Int@ and @Float@, are easily
+Accelerate arrays of primitive type, such as `Int` and `Float`, are easily
 represented as arrays of the corresponding integral and floating point types.
 More interesting is the case of arrays of tuples, where we use a non-parametric
 array representation so that arrays of tuples are represented in memory as a
@@ -677,7 +677,7 @@ The salient feature of each expression is that it returns two integers, albeit
 each wrapped in different constructors. We call this the \emph{surface} type
 of a term. However, an Accelerate backend implementation should not need to know
 about the surface type representation. Indeed, we do not want to have to extend
-the backend to support new user-defined types such as @Point@. The @Elt@ class
+the backend to support new user-defined types such as `Point`. The `Elt` class
 tells us how to convert between the surface type of an expression that a user
 programs in, into the \emph{representation} type that an implementation stores
 and computes data in. We use a type
@@ -694,9 +694,9 @@ type instance EltRepr (a, b, c) = (EltRepr (a, b), EltRepr' c)
   -- and so on\ldots
 \end{lstlisting}
 %
-Here @EltRepr'@ is similar, except that we use a flattened representation at the
+Here `EltRepr'` is similar, except that we use a flattened representation at the
 leaves in order to avoid overly nested pairs; that is, primitive types are
-represented as @EltRepr' Int = Int@. Arrays of tuples have a similar mapping
+represented as `EltRepr' Int = Int`. Arrays of tuples have a similar mapping
 into a nested tuple of arrays of primitive type.
 
 
@@ -709,8 +709,8 @@ sub-language do not directly issue computations; instead, they build term trees
 to represent embedded computations (\S\ref{sec:EDSLs}). The terms in the surface
 language use \indexe{higher-order abstract syntax} (HOAS) to embed
 function-valued scalar expressions as well as type class overloading to reflect
-arithmetic expressions. For example, the body of the @dotp@ function
-% @fold (+) 0 (zipWith (*) xs' ys')@
+arithmetic expressions. For example, the body of the `dotp` function
+% `fold (+) 0 (zipWith (*) xs' ys')`
 is translated into:\footnote{The subterms to \footcode{add} and \footcode{mul}
 here are inline into the \footcode{Fold} and \code{ZipWith} terms respectively,
 we only use a \footcode{where}-clause to improve readability.}
@@ -743,7 +743,7 @@ conversion from HOAS to a nameless de Bruijn representation using
 GADTs~\cite{Chakravarty:2009uo} was simultaneously discovered
 by~\citet{Atkey:2009dj}.
 
-Overall, the nameless form of @dotp@ is:
+Overall, the nameless form of `dotp` is:
 %
 \begin{lstlisting}[style=haskell]
 Fold add (Const 0) (ZipWith mul xs' ys')
@@ -756,7 +756,7 @@ Fold add (Const 0) (ZipWith mul xs' ys')
     mul = -- as \emph{\texttt{add}}, but using \emph{\texttt{PrimMul}} ...
 \end{lstlisting}
 %
-The @Lam@ constructor introduces nameless abstractions and @Var@ wraps a de
+The `Lam` constructor introduces nameless abstractions and `Var` wraps a de
 Bruijn index. At this point, the program is further optimised by the frontend,
 for example by applying the fusion transformation~(\S\ref{sec:array_fusion}).
 
@@ -779,14 +779,14 @@ data Idx env t where                                -- an index is either\ldots
     SuccIdx :: Idx env t -> Idx (env, s) t          -- \ldots under some junk
 \end{lstlisting}
 %
-Indices have type @Idx env t@, where the type @env@ keeps track of what
+Indices have type `Idx env t`, where the type `env` keeps track of what
 variables are in scope using the same encoding of nested tuples used by the
-environment, while @t@ represents the type of a distinguished element in this
-list. At the value level, @Idx@ encodes the index of that element in the list.
+environment, while `t` represents the type of a distinguished element in this
+list. At the value level, `Idx` encodes the index of that element in the list.
 
 As terms are pushed into the environment, the type of the new term becomes
-wrapped in the type of the environment; i.e.\ @t@ is existentially quantified in
-@Push@. Our de Bruijn indices recover the wrapped type of individual elements by
+wrapped in the type of the environment; i.e.\ `t` is existentially quantified in
+`Push`. Our de Bruijn indices recover the wrapped type of individual elements by
 projecting the index through the environment:
 %
 \begin{lstlisting}[style=haskell]
