--- a/thesis.tex
+++ b/thesis.tex
@@ -63,7 +63,6 @@
 \renewcommand{\chapter}[1]{\oldchapter{#1}\addthumb{#1}{}{white}{black}}
 
 \include{sections/01-introduction}
-% \include{sections/02-background}
 \include{sections/03-design}
 \include{sections/04-implementation}
 \include{sections/05-optimisation}
@@ -73,6 +72,7 @@
 % BACK MATTER
 % ~~~~~~~~~~~
 
+\maketickchar
 \cleardoublepage
 \stopthumb
 \
